--- a/index.ipynb
+++ b/index.ipynb
@@ -630,8 +630,8 @@
     "c = {'name': \"example\"}\n",
     "print(\"1.\", {} is {}) # false\n",
     "print(\"1A.\", {} == {}) # true\n",
-    "print(\"2.\", [] is []) # fa\n",
-    "print(\"3.\", \"Hi\" is \"Hi\") #\n",
+    "print(\"2.\", [] is []) # false\n",
+    "print(\"3.\", \"Hi\" is \"Hi\") # true\n",
     "print(\"4.\", [\"same\"] is [\"same\"]) #\n",
     "print(\"4A.\", [\"same\"] == [\"same\"]) #\n",
     "print(\"5.\", 9 is not 10) #\n",
