--- a/index.ipynb
+++ b/index.ipynb
@@ -634,8 +634,8 @@
     "print(\"3.\", \"Hi\" is \"Hi\") # true\n",
     "print(\"4.\", [\"same\"] is [\"same\"]) # false\n",
     "print(\"4A.\", [\"same\"] == [\"same\"]) # true\n",
-    "print(\"5.\", 9 is not 10) #\n",
-    "print(\"6.\", x is b) #\n",
+    "print(\"5.\", 9 is not 10) # true\n",
+    "print(\"6.\", x is b) # false\n",
     "print(\"7.\", b is c) #\n",
     "print(\"7A.\", b == c) #\n",
     "print(\"8.\", x is not c) #"
