--- a/index.ipynb
+++ b/index.ipynb
@@ -637,7 +637,7 @@
     "print(\"5.\", 9 is not 10) # true\n",
     "print(\"6.\", x is b) # \n",
     "print(\"7.\", b is c) # false\n",
-    "print(\"7A.\", b == c) #\n",
+    "print(\"7A.\", b == c) # true\n",
     "print(\"8.\", x is not c) #"
    ]
   },
