--- a/index.ipynb
+++ b/index.ipynb
@@ -638,7 +638,7 @@
     "print(\"6.\", x is b) # \n",
     "print(\"7.\", b is c) # false\n",
     "print(\"7A.\", b == c) # true\n",
-    "print(\"8.\", x is not c) #"
+    "print(\"8.\", x is not c) # true"
    ]
   },
   {
