Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -656,19 +656,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "1000\n"
      ]
     }
    ],
    "source": [
-    "my_condition = True\n",
+    "my_condition = False\n",
     "value = 10 if my_condition else 1000\n",
     "print(value)"
    ]
